# atmacup_17

./: .gitignore  README.md  pyproject.toml
predictions/: baseline_lightgbm_4.csv  baseline_pos_label_smoothing_lightgbm_16.csv  baseline_pos_lightgbm_15.csv  baseline_pos_lightgbm_5.csv  cnn_embeddings_oof_preds.csv  cnn_embeddings_test_preds.csv  deberta-large-seed0-Ver1_test_predictions.csv  deberta-large-seed0-Ver6_test_predictions.csv  lightgbm-seed0-Ver1_test_predictions.csv  lightgbm-seed0-Ver2_test_predictions.csv  lightgbm-seed0-Ver3_test_predictions.csv  pos_kfold10_lightgbm_9.csv  pos_rating_lightgbm_10.csv  pos_rating_lightgbm_11.csv  pos_rating_lightgbm_12.csv  pos_rating_lightgbm_8.csv
pretrain_script/: mlm_deberta.py
src/: baseline_and_pos_neg_lightgbm_5.py  baseline_lightgbm_4.py  category_lightgbm_2.py  cnn_embeddings.py  initial_submit_deBERTa_1.py  plain_lightgbm_2.py  pos_neg_feature_lightgbm_11.py  pos_neg_feature_lightgbm_13.py  pos_neg_label_smooth_lightgbm_15.py  pos_neg_lightgbm_3.py  pos_neg_rating_lightgbm_8.py  v2_deberta_6.py
